2009-01-14  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/slide-window.jl: merge changes from sawfish-pager

	* lisp/sawfish/wm/state/shading.jl: merge changes from sawfish-pager

2009-01-11  Mario Blättermann  <mariobl@svn.gnome.org>
	* po/de.po: Updated German translation.

2009-01-06  Christopher Bratusek <nano-master@gmx.de>
	* Makefile.in: don't forget to uninstall sawfish.pc upon "make uninstall"

2009-01-03  Christopher Bratusek <nano-master@gmx.de>
	* po/sawfish.pot: updated .pot file

	* po/*.po: updated all .po files

2009-01-01  Christopher Bratusek <nano-master@gmx.de>
	* autogen.sh: small rework

	* config.h.in
	* configure.in
	* Makedefs.in: new configure.in working now (some necassary #define have not been created)

	* build-info: create ./src/build.h instead of ./build.in

	* configure.in: execute build-info, since some .c files include it, but it hasn't been there before

	* lisp/sawfish/wm/viewport.jl: move viewport-boundary-mode and scroll-viewport-steps from Workspace
				       to Workspace/Viewport in Sawfish-UI

	* m4: add that directory to make libtool 1.x shut up

	* lisp/sawfish/wm/gnome/menus.jl
	* lisp/sawfish/wm/util/display-wininfo.jl
	* lisp/sawfish/gtk/Makefile.in
	* lisp/sawfish/ui/Makefile.in
	* lisp/sawfish/ui/widgets/workspace-geometry.jl
	* lisp/sawfish/ui/widgets/icon.jl
	* configure.in: dropped libgnome|gnomeui|gnomecanvas related widgets, use pure-gtk instead

	* src/Makefile.in: make uninstall target work again

	* README.IMPORTANT: added

2008-12-31  Christopher Bratusek <nano-master@gmx.de>
	* config.h.in
	* configure.in
	* Makedefs.in: temporarily revert configure.in rework, since pango checks seem to not work

2008-12-30  Christopher Bratusek <nano-master@gmx.de>
	* Makedefs.in
	* configure.in: Major rework of configure.in [breaks build with XFree86 atm]

	* config.h.in: regenerated

	* sawmill.h
	* sawfish.h: renamed sawmill.h to sawfish.h

	* sawmill_subrs.h