@@ -1,17 +1,17 @@
 #| display-window.jl -- activating windows
 
-   $Id$
+   $Id: display-window.jl,v 1.9 2002/06/18 04:22:22 jsh Exp $
 
    Copyright (C) 2000 John Harper <john@dcs.warwick.ac.uk>
 
-   This file is part of librep.
+   This file is part of sawfish.
 
-   librep is free software; you can redistribute it and/or modify it
+   sawfish is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2, or (at your option)
    any later version.
 
-   librep is distributed in the hope that it will be useful, but
+   sawfish is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
